--- a/project.html
+++ b/project.html
@@ -30,29 +30,105 @@
     </div>
     <div class="bgimg">
       <div class="topleft">
-        <p>Logo</p>
+      <img src="img/FnBLogo_FINAL_800.png" alt="Hypekingfish Logo" style="height:40px;">
+      <p style="margin-top:8px;font-weight:bold;">Hypekingfish Projects</p>
       </div>
       <div class="middle">
-        <h1>COMING SOON</h1>
-        <hr />
-        <p id="demo"></p>
+      <h1>COMING SOON</h1>
+      <hr />
+      <p id="demo"></p>
+      <p style="margin-top:24px;">
+        We're working on something exciting!<br>
+        This page will showcase our latest projects, including:<br>
+        <ul style="text-align:left; display:inline-block; margin-top:12px;">
+        <li>Flight Sim Add-ons &amp; Tools</li>
+        <li>Streaming Resources</li>
+        <li>Open Source Utilities</li>
+        <li>Community Events</li>
+        </ul>
+        Stay tuned for updates and sneak peeks.<br>
+        For inquiries or collaborations, <a href="about.html#contact">contact us</a>.
+      </p>
       </div>
       <div class="bottomleft">
-        <p>Some text</p>
+      <p>
+        <strong>Follow us:</strong>
+        <a href="https://twitter.com/hypekingfish" target="_blank"><i class="fa fa-twitter"></i></a>
+        <a href="https://github.com/hypekingfish" target="_blank"><i class="fa fa-github"></i></a>
+        <a href="https://twitch.tv/hypekingfish" target="_blank"><i class="fa fa-twitch"></i></a>
+      </p>
+      <p style="margin-top:8px;"></span>Last updated: June <span id="year"></p>
       </div>
     </div>
-    <footer>
-      <p>
-        <small
-          ><img src="img/Progress_Pride_Flag.png" /> Created with passion by Hypekingfish <img src="img/Progress_Pride_Flag.png"
-        /></small>
-      </p>
-      <p>
-        <small
-          >All content &copy; 2025 of Hypekingfish, unless previous copyright
-          exists.</small
-        >
-      </p>
+    <footer class="site-footer">
+      <div class="footer-content">
+        <div class="footer-branding">
+          <img
+            src="img/Progress_Pride_Flag.png"
+            alt="Progress Pride Flag"
+            class="footer-flag"
+          />
+          <span class="footer-title"
+            >Created with passion by <strong>Hypekingfish</strong></span
+          >
+          <img
+            src="img/Progress_Pride_Flag.png"
+            alt="Progress Pride Flag"
+            class="footer-flag"
+          />
+        </div>
+        <div class="footer-social">
+          <a
+            href="https://github.com/[your-actual-username]"
+            aria-label="GitHub"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="fab fa-github"></i>
+          </a>
+          <a
+            href="https://twitter.com/fishnbuckjr02"
+            aria-label="Twitter"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="fab fa-x-twitter"></i>
+          </a>
+          <a
+            href="https://youtube.com/yourchannel"
+            aria-label="YouTube"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="fab fa-youtube"></i>
+          </a>
+          <a
+            href="https://twitch.tv/hypekingfish"
+            aria-label="Twitch"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="fab fa-twitch"></i>
+          </a>
+          <a
+            href="https://discord.gg/yourdiscord"
+            aria-label="Discord"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i class="fab fa-discord"></i>
+          </a>
+        </div>
+        <p class="footer-copyright">
+          <small>
+            &copy; <span id="year"></span> Hypekingfish. All rights reserved.<br />
+            All content is property of Hypekingfish unless otherwise noted.
+          </small>
+        </p>
+      </div>
+    <script>
+      document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
     </footer>
     <script src="scripts/countdown.js"></script>
     <script src="scripts/navmenu.js"></script>
