--- a/streaming.html
+++ b/streaming.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
         <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
     </head>
-    <body class="container">
+    <body>
         <div class="topnav">
         <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png"/>Hypekingfish</a>
         <div id="myLinks">
